src/main/java/com/example/jwtassignment/common/error/ErrorRespone.java
package com.example.jwtassignment.common.error;

public class ErrorRespone {

}
